tests/should_succeed/type_contains_ptr_to_itself.jou
class Foo:
    x: Foo*
    def foo(self: Foo*) -> void:
        return

def main() -> int:
    return 0
