tests/syntax_error/var_with_type.jou
def main() -> int:
    var x: int = 1  # Error: there is no 'var' keyword in Jou
